Replace old with new Builder